# lucris-rs

./: .gitignore  Cargo.toml  README.md  app_lucris.py  app_lucris_stream.py  extract_questions.py  gradio_00.py  haystack_hybrid.py  haystack_research.py  haystack_store.py  hybrid.py  lucris2dataset.py  requirements.txt
.github/workflows/: release.yml
examples/: out_01.typ  out_02.typ  out_03.typ  out_04.typ  out_05.typ  out_06.typ  out_07.typ  out_08.typ  out_09.typ  out_10.typ
src/: combined.rs  errors.rs  formatting.rs  json.rs  json_concepts.rs  json_fingerprint.rs  json_orgunits.rs  json_person.rs  json_research.rs  main.rs  uuid_map.rs
tests/data/: journal.jsonl  research_one.jsonl  research_one_err.jsonl
