[package]
name = "lucris-rs"
version = "0.1.0"
edition = "2021"
description = "Relevant to the Lucris project."
license = "GPL-3"
authors = ["Petrus Berck"]
keywords = ["LUCRIS"]
publish = false

[profile.dev]
opt-level = 3

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simple-log = "2.1.0"
