[package]
name = "lucris-rs"
version = "0.1.0"
edition = "2021"
description = "Process files for the AI Lund project."
authors = ["Peter Berck <peter.berck@humlab.lu.se>"]
keywords = ["LUCRIS"]
publish = false
repository = "https://github.com/HumlabLu/lucris-rs"
readme = "README.md"
license = "GNU AGPLv3"
categories = ["LUCRIS"]

[profile.dev]
opt-level = 3

[lints.clippy]
redundant_field_names = "allow"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
flexi_logger = "0.29.2"
log = "0.4.22"
rayon = "1.10.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v4", "v7"] }
